tests/baselines/reference/isolatedModulesSketchyAliasLocalMerge(isolatedmodules=true,verbatimmodulesyntax=false).errors.txt
bad.ts(1,10): error TS2865: Import 'FC' conflicts with local value, so must be declared with a type-only import when 'isolatedModules' is enabled.


==== types.ts (0 errors) ====
    export type FC = () => void;
    
==== bad.ts (1 errors) ====
    import { FC } from "./types";
             ~~
!!! error TS2865: Import 'FC' conflicts with local value, so must be declared with a type-only import when 'isolatedModules' is enabled.
    let FC: FC | null = null;
    
==== good.ts (0 errors) ====
    import type { FC } from "./types";
    let FC: FC | null = null;
    